[mirotalksfu] - improve restAPI and docs
