# app/api/meetings/meetings.php
@@ -1,0 +1,29 @@
+<?php
+
+$API_KEY_SECRET = "mirotalksfu_default_secret";
+$MIROTALK_URL = "https://sfu.mirotalk.com/api/v1/meetings";
+//$MIROTALK_URL = "http://localhost:3010/api/v1/meetings";
+
+$ch = curl_init();
+curl_setopt($ch, CURLOPT_URL, $MIROTALK_URL);
+curl_setopt($ch, CURLOPT_RETURNTRANSFER, 1);
+curl_setopt($ch, CURLOPT_HTTPGET, true);
+
+$headers = [
+    'authorization:' . $API_KEY_SECRET,
+    'Content-Type: application/json'
+];
+
+curl_setopt($ch, CURLOPT_HTTPHEADER, $headers);
+$response = curl_exec($ch);
+$httpcode = curl_getinfo($ch, CURLINFO_HTTP_CODE);
+
+curl_close($ch);
+
+echo "Status code: $httpcode \n";
+
+if ($response) {
+    echo json_encode(json_decode($response), JSON_PRETTY_PRINT);
+} else {
+    echo "Failed to retrieve data.\n";
+}
